[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoloadst"
version = "0.1.0"
description = "Spatial and spatio-temporal load instability analysis for distribution networks (SimBench/pandapower)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name="Rasoul Jalalifar"},
  {name="Seyedeh Leyla Mansouri Alehashem"}
]

keywords = [
    "power systems",
    "distribution networks",
    "load instability",
    "spatial analysis",
    "geostatistics",
    "variogram",
    "moran",
    "simbench",
    "pandapower",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "pandapower>=2.10",
    "simbench>=1.3",
    "scikit-gstat>=1.0",
    "libpysal>=4.6",
    "esda>=2.4",
    "networkx>=2.6",
]

[project.optional-dependencies]
viz = [
    "geopandas>=0.10",
    "shapely>=1.8",
    "contextily>=1.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.10",
    "mypy>=0.990",
    "ruff>=0.0.200",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]

[project.urls]
Homepage = "https://github.com/yourusername/geoloadst"
Documentation = "https://geoloadst.readthedocs.io"
Repository = "https://github.com/yourusername/geoloadst"
Issues = "https://github.com/yourusername/geoloadst/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["geoloadst", "geoloadst.*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=geoloadst"

